syntax = "proto3";
package game;

message LoginReq {
	string uId = 1;
	string nick = 2;
	string photo = 3;
	string psw = 4;
}
message LoginResp {
	int32 res = 1;
}

message CreateRoomReq {
	int32 nSumUser = 1;
	int32 skin = 2;
}
message CreateRoomResp {
	int32 res = 1;
	int32 nIdRoom = 2;
	int32 nSumUser = 4;
}

message JoinRoomReq {
	int32 nIdRoom = 1;
}
message JoinRoomResp {
	int32 res = 1;
	int32 nIdRoom = 2;
	int32 nSumUser = 3;
	string uIdHost = 4;
	repeated UserJoin users = 5;
}
message UserJoin {
	string uId = 1;
	string nick = 2;
	string photo = 3;
	int32 nPos = 4;
	int32 skin = 5;
}

message StartGameReq {
	string n = 1;
}
message StartGameResp {
	int32 res = 1;
}

message OperateLuckyNextResp {
	int32 nPos = 1;
}

message OperateLuckyEndReq {
	int32 nPos = 1;
}
message OperateLuckyEndResp {
	int32 res = 1;
	int32 nPos = 2;
	int32 n = 3;
}

message OperateFlyReq {
	int32 fInd = 1;
}
message OperateFlyResp {
	int32 nPos = 1;
	int32 fInd = 2;
	int32 nStep = 3;
	int32 nDesti = 4;
	int32 res = 5;
}


message BroadcastRoomInfo {
	int32 operate = 1;
	string uId = 2;
	string nick = 3;
	string photo = 4;
	int32 nPos = 5;
	string skin = 6;
}
message BroadcastOperateInfo {
	int32 operate = 1;
	string uId = 2;
	string nick = 3;
	string photo = 4;
	int32 nPos = 5;
}


message example{
	string cityId = 1; 
	LoginResp info = 2;
	bool bo = 3; 
	repeated string buildingId = 4; 
	optional int32 soldierType = 5; 
}
